страница про курицу

--- a/app/ugodie.html
+++ b/app/ugodie.html
@@ -134,7 +134,7 @@
 </header><!-- end header -->
 
 	<main class="main-container">	
-		
+			
 	<div class="main-banner">
 		<div class="uk-container uk-container--large">
 
@@ -165,10 +165,9 @@
 			</div>
 					</div>
 	</div>
-
 	
 
-		<section class="advantages-section advantages-section--blue">
+	<section class="advantages-section advantages-section--blue">
 		<div class="uk-container">
 			<div class="advantages-section__inner">
 				<ul class="advantages-list advantages-list--four-items">
@@ -176,7 +175,7 @@
 						<div class="advantage-item">
 							<div class="advantage-item__img">
 								<svg width="100%" height="100%" class="">
-								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+									<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-15.svg" alt="" uk-img>
 							</div>
@@ -189,7 +188,7 @@
 						<div class="advantage-item">
 							<div class="advantage-item__img">
 								<svg width="100%" height="100%" class="">
-								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+									<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-16.svg" alt="" uk-img>
 							</div>
@@ -202,7 +201,7 @@
 						<div class="advantage-item">
 							<div class="advantage-item__img">
 								<svg width="100%" height="100%" class="">
-								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+									<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-17.svg" alt="" uk-img>
 							</div>
@@ -215,7 +214,7 @@
 						<div class="advantage-item">
 							<div class="advantage-item__img">
 								<svg width="100%" height="100%" class="">
-								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-6"></use>
+									<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-6"></use>
 								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-18.svg" alt="" uk-img>
 							</div>
@@ -223,87 +222,89 @@
 								<div class="title-h3">Только самые крупные яйца используются в производстве марки (СВ и СО)</div>
 							</div>
 						</div>
-					</li>  
+					</li>
 				</ul>
 				<div class="center-box">
 					<svg width="100%" height="100%" class="yellow-ellipse-1">
-					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-3"></use>
+						<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-3"></use>
 					</svg>
 					<svg width="100%" height="100%" class="yellow-ellipse-2">
-					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-4"></use>
+						<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-4"></use>
 					</svg>
 					<img src="img/media/advantage-img/egg-blue.png" alt="">
 				</div>
 			</div>
 		</div>
 	</section>
-	
-	
+
+
+
 
 	
-<div class="advantages-h-section" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
-	<div class="uk-container">
-		<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Большим яйцам — специальная упаковка</h2>
-		<ul class="advantages-h-list advantages-h-list--three-items">
-			<li class="item">
-				<div class="item__img">
-					<div class="bg-img">
-						<svg width="100%" height="100%" class="adv-bg-img">
-						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-1"></use>
-						</svg>
+	<div class="advantages-h-section" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
+		<div class="uk-container">
+			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Большим яйцам — специальная упаковка</h2>
+			<ul class="advantages-h-list advantages-h-list--three-items">
+				<li class="item">
+					<div class="item__img">
+						<div class="bg-img">
+							<svg width="100%" height="100%" class="adv-bg-img">
+								<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-1"></use>
+							</svg>
+						</div>
+						<div class="content-img">
+							<svg width="80px" height="93px" class="adv-img">
+								<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-1"></use>
+							</svg>
+						</div>
 					</div>
-					<div class="content-img">
-						<svg width="80px" height="93px" class="adv-img">
-						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-1"></use>
-						</svg>
+					<div class="item__text">
+						Прочная упаковка выдержит кастрюлю, поставленную сверху
 					</div>
-				</div>
-				<div class="item__text">
-					Прочная упаковка выдержит кастрюлю, поставленную сверху
-				</div>
-			</li>
+				</li>
 
-			<li class="item">
-				<div class="item__img">
-					<div class="bg-img">
-						<svg width="100%" height="100%" class="adv-bg-img">
-						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-2"></use>
-						</svg>
+				<li class="item">
+					<div class="item__img">
+						<div class="bg-img">
+							<svg width="100%" height="100%" class="adv-bg-img">
+								<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-2"></use>
+							</svg>
+						</div>
+						<div class="content-img">
+							<svg width="80px" height="63px" class="adv-img">
+								<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-8"></use>
+							</svg>
+						</div>
 					</div>
-					<div class="content-img">
-						<svg width="80px" height="63px" class="adv-img">
-						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-8"></use>
-						</svg>
+					<div class="item__text">
+						Cпециальная упаковка для особо крупных яиц (СВ)
 					</div>
-				</div>
-				<div class="item__text">
-					Cпециальная упаковка для особо крупных яиц (СВ)
-				</div>
-			</li>
+				</li>
 
-			<li class="item">
-				<div class="item__img">
-					<div class="bg-img">
-						<svg width="100%" height="100%" class="adv-bg-img">
-						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-3"></use>
-						</svg>
+				<li class="item">
+					<div class="item__img">
+						<div class="bg-img">
+							<svg width="100%" height="100%" class="adv-bg-img">
+								<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-3"></use>
+							</svg>
+						</div>
+						<div class="content-img">
+							<svg width="97px" height="80px" class="adv-img">
+								<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-9"></use>
+							</svg>
+						</div>
 					</div>
-					<div class="content-img">
-						<svg width="97px" height="80px" class="adv-img">
-						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-9"></use>
-						</svg>
+					<div class="item__text">
+						Упаковка повышенной прочности для яиц большого размера
 					</div>
-				</div>
-				<div class="item__text">
-					Упаковка повышенной прочности для яиц большого размера
-				</div>
-			</li>
-		</ul>
+				</li>
+			</ul>
+		</div>
 	</div>
-</div>
 
 
 
+	
 	<div class="typebox-section wave-bg" uk-scrollspy="cls: wave-anim">
 		<div class="uk-container">
 			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Виды упаковки</h2>
@@ -314,7 +315,7 @@
 					<div class="item__img">
 						<div class="bg-img">
 							<svg width="100%" height="100%" class="typebox-bg-img">
-							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 							</svg>
 						</div>
 						<div class="content-img">
@@ -331,7 +332,7 @@
 					<div class="item__img">
 						<div class="bg-img">
 							<svg width="100%" height="100%" class="typebox-bg-img">
-							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-2"></use>
+								<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-2"></use>
 							</svg>
 						</div>
 						<div class="content-img">
@@ -348,7 +349,7 @@
 					<div class="item__img">
 						<div class="bg-img">
 							<svg width="100%" height="100%" class="typebox-bg-img">
-							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-3"></use>
+								<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-3"></use>
 							</svg>
 						</div>
 						<div class="content-img">
@@ -357,7 +358,8 @@
 					</div>
 					<div class="item__text">
 						<div class="title-h3">Еще больше в одной упаковке</div>
-						<div class="item__subtitle">15 яиц СО (65-74,9 грамм) </div>
+						<div class="item__subtitle">15 яиц СО (65-74,9 грамм)
+						</div>
 					</div>
 				</li>
 
@@ -367,7 +369,8 @@
 	</div>
 
 
-	<!-- begin brands-slider -->
+
+		<!-- begin brands-slider -->
 	<div class="brands-slider preload">
 		<h2 class="uk-text-center" uk-scrollspy="cls:slide-up">Купить онлайн</h2>
 		<div class="uk-container" uk-scrollspy="cls:slide-up; delay: 300">
@@ -393,7 +396,7 @@
 		</div>
 	</div>
 	<!-- end  brands-slider -->
-
+	
 <section class="time-section">
 	<div class="uk-container uk-container--small">
 		<!-- <h2 class="uk-text-center" uk-scrollspy="cls:slide-up">Сколько времени варить яйца?</h2> -->
@@ -590,7 +593,7 @@
 		<a href="" class="btn btn--yellow uk-margin-auto" uk-scrollspy="cls:slide-up"><span>Посмотреть все рецепты</span></a>
 	</div>
 </section>
-
+	
 <section class="slider-section wave-bg" uk-scrollspy="cls: wave-anim">
 	<div class="uk-container uk-container--small">
 		<!-- begin composition-slider -->
