--- a/app/nov.html
+++ b/app/nov.html
@@ -167,12 +167,11 @@
 					</div>
 	</div>
 	
-	
 
-	
-	
 
-		<section class="advantages-section advantages-section--blue">
+
+
+	<section class="advantages-section advantages-section--blue">
 		<div class="uk-container">
 			<div class="advantages-section__inner">
 				<ul class="advantages-list advantages-list--four-items">
@@ -180,7 +179,7 @@
 						<div class="advantage-item">
 							<div class="advantage-item__img">
 								<svg width="100%" height="100%" class="">
-								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+									<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-25.svg" alt="" uk-img>
 							</div>
@@ -193,7 +192,7 @@
 						<div class="advantage-item">
 							<div class="advantage-item__img">
 								<svg width="100%" height="100%" class="">
-								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+									<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-24.svg" alt="" uk-img>
 							</div>
@@ -206,12 +205,14 @@
 						<div class="advantage-item">
 							<div class="advantage-item__img">
 								<svg width="100%" height="100%" class="">
-								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+									<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-26.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
-								<div class="title-h3">Производство в соответствии <br> с ГОСТ 31654-2012</div>
+								<div class="title-h3">Производство в соответствии
+									<br>
+									с ГОСТ 31654-2012</div>
 							</div>
 						</div>
 					</li>
@@ -219,7 +220,7 @@
 						<div class="advantage-item">
 							<div class="advantage-item__img">
 								<svg width="100%" height="100%" class="">
-								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-6"></use>
+									<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-6"></use>
 								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-27.svg" alt="" uk-img>
 							</div>
@@ -227,83 +228,85 @@
 								<div class="title-h3">Широкий ассортимент категорий (СО, С1, С2, С3)</div>
 							</div>
 						</div>
-					</li>  
+					</li>
 				</ul>
 				<div class="center-box">
 					<svg width="100%" height="100%" class="yellow-ellipse-1">
-					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-3"></use>
+						<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-3"></use>
 					</svg>
 					<svg width="100%" height="100%" class="yellow-ellipse-2">
-					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-4"></use>
+						<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-4"></use>
 					</svg>
 					<img src="img/media/advantage-img/egg-brown-2.png" alt="">
 				</div>
 			</div>
 		</div>
 	</section>
-		
+
+	
 
 
-<div class="advantages-h-section" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
-	<div class="uk-container">
-		<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Полезный продукт в удобной упаковке</h2>
-		<ul class="advantages-h-list advantages-h-list--three-items">
-			<li class="item">
-				<div class="item__img">
-					<div class="bg-img">
-						<svg width="100%" height="100%" class="adv-bg-img">
-						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-1"></use>
-						</svg>
+	<div class="advantages-h-section" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
+		<div class="uk-container">
+			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Полезный продукт в удобной упаковке</h2>
+			<ul class="advantages-h-list advantages-h-list--three-items">
+				<li class="item">
+					<div class="item__img">
+						<div class="bg-img">
+							<svg width="100%" height="100%" class="adv-bg-img">
+								<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-1"></use>
+							</svg>
+						</div>
+						<div class="content-img">
+							<svg width="80px" height="93px" class="adv-img">
+								<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-2"></use>
+							</svg>
+						</div>
 					</div>
-					<div class="content-img">
-						<svg width="80px" height="93px" class="adv-img">
-						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-2"></use>
-						</svg>
+					<div class="item__text">
+						Экологичная упаковка из переработанной бумаги
 					</div>
-				</div>
-				<div class="item__text">
-					Экологичная упаковка из переработанной бумаги
-				</div>
-			</li>
+				</li>
 
-			<li class="item">
-				<div class="item__img">
-					<div class="bg-img">
-						<svg width="100%" height="100%" class="adv-bg-img">
-						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-2"></use>
-						</svg>
+				<li class="item">
+					<div class="item__img">
+						<div class="bg-img">
+							<svg width="100%" height="100%" class="adv-bg-img">
+								<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-2"></use>
+							</svg>
+						</div>
+						<div class="content-img">
+							<svg width="123px" height="86px" class="adv-img">
+								<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-11"></use>
+							</svg>
+						</div>
 					</div>
-					<div class="content-img">
-						<svg width="123px" height="86px" class="adv-img">
-						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-11"></use>
-						</svg>
+					<div class="item__text">
+						Самый распространённый вид упаковки на полках магазинов
 					</div>
-				</div>
-				<div class="item__text">
-					Самый распространённый вид упаковки на полках магазинов
-				</div>
-			</li>
+				</li>
 
-			<li class="item">
-				<div class="item__img">
-					<div class="bg-img">
-						<svg width="100%" height="100%" class="adv-bg-img">
-						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-3"></use>
-						</svg>
+				<li class="item">
+					<div class="item__img">
+						<div class="bg-img">
+							<svg width="100%" height="100%" class="adv-bg-img">
+								<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#medium-ellipse-3"></use>
+							</svg>
+						</div>
+						<div class="content-img">
+							<svg width="112px" height="32px" class="adv-img">
+								<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-12"></use>
+							</svg>
+						</div>
 					</div>
-					<div class="content-img">
-						<svg width="112px" height="32px" class="adv-img">
-						  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#adv-icon-12"></use>
-						</svg>
+					<div class="item__text">
+						Дополнительные ребра жесткости для надежной транспортировки
 					</div>
-				</div>
-				<div class="item__text">
-					Дополнительные ребра жесткости для надежной транспортировки
-				</div>
-			</li>
-		</ul>
+				</li>
+			</ul>
+		</div>
 	</div>
-</div>
+
 
 	
 
@@ -317,7 +320,7 @@
 					<div class="item__img">
 						<div class="bg-img">
 							<svg width="100%" height="100%" class="typebox-bg-img">
-							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-3"></use>
+								<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-3"></use>
 							</svg>
 						</div>
 						<div class="content-img">
@@ -335,7 +338,7 @@
 					<div class="item__img">
 						<div class="bg-img">
 							<svg width="100%" height="100%" class="typebox-bg-img">
-							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-2"></use>
+								<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-2"></use>
 							</svg>
 						</div>
 						<div class="content-img">
@@ -352,7 +355,7 @@
 					<div class="item__img">
 						<div class="bg-img">
 							<svg width="100%" height="100%" class="typebox-bg-img">
-							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
 							</svg>
 						</div>
 						<div class="content-img">
@@ -369,8 +372,8 @@
 					<div class="item__img">
 						<div class="bg-img">
 							<svg width="100%" height="100%" class="typebox-bg-img">
-							  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-3"></use>
-							</svg> 
+								<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-3"></use>
+							</svg>
 						</div>
 						<div class="content-img">
 							<img data-src="img/media/box-type-11.png" alt="" uk-img>
@@ -386,6 +389,7 @@
 
 		</div>
 	</div>
+
 		<!-- begin brands-slider -->
 	<div class="brands-slider preload">
 		<h2 class="uk-text-center" uk-scrollspy="cls:slide-up">Купить онлайн</h2>
