--- a/app/chicken.html
+++ b/app/chicken.html
@@ -233,7 +233,7 @@
 									<br>
 									привлекательная
 									<br>
-									цена</div>
+									цена в сравнении с бройлером</div>
 								<div class="text"></div>
 							</div>
 						</div>
