--- a/app/chicken.html
+++ b/app/chicken.html
@@ -142,10 +142,10 @@
 			<div class="main-banner__img"  uk-scrollspy="cls:border-anim">
 
 									<picture>
-						<source srcset="img/media/main-banner-6-1440x730.png" media="(min-width: 961px)">
+						<source srcset="img/media/test-banner-4.jpg" media="(min-width: 961px)">
 						<source srcset="img/media/main-banner-6-960x487-tablet.png" media="(min-width: 641px) and (max-width: 960px)">
 						<source srcset="img/media/main-banner-6-640x325-mob-xs.png" media="(max-width: 640px)">
-						<img src="img/media/main-banner-6-1440x730.png" alt="" loading="lazy">
+						<img src="img/media/test-banner-4.jpg" alt="" loading="lazy">
 					</picture>
 				
 
@@ -162,7 +162,7 @@
 				</svg>
 			</div>
 						<div class="fly-box " uk-scrollspy="cls: slide-up-abs uk-visible; delay: 500">
-				<img src="img/media/chicken-meat-box.png" alt="Лето">
+				<img src="img/media/chicken-meat-box-2.jpg" alt="Лето">
 			</div>
 					</div>
 	</div>
@@ -262,12 +262,17 @@
 					<svg width="100%" height="100%" class="yellow-ellipse-2">
 						<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-4"></use>
 					</svg>
-					<img src="img/media/advantage-img/chicken-meat-box.png" alt="">
+					<img src="img/media/advantage-img/chicken-meat-box-2.jpg" alt="">
 				</div>
 			</div>
 		</div>
 	</section>
 	
+
+
+
+
+
 
 
 
@@ -346,6 +351,7 @@
 	</div>
 
 
+
 	
 
 
@@ -365,7 +371,7 @@
 							</svg>
 						</div>
 						<div class="content-img">
-							<img data-src="img/media/box-type-19.png" alt="" uk-img>
+							<img data-src="img/media/box-type-20.jpg" alt="" uk-img>
 						</div>
 					</div>
 					<div class="item__text">
