--- a/app/index.html
+++ b/app/index.html
@@ -86,8 +86,7 @@
 
 </div><!-- end top-panel -->
 
-	
-<!-- begin nav -->
+	<!-- begin nav -->
 <nav class="nav">
 	<div class="uk-container">
 		<ul class="main-nav">
@@ -109,20 +108,21 @@
 				</span>
 			</li>
 			<li>
-				<a href="junior.html">
-					<img width="92px" height="55px" data-src="img/icon-svg/nav-ellipse-3.svg" alt="" uk-img>
-					<span>Junior</span>
-				</a>
-			</li>
-			<li>
 				<a href="nov.html">
 					<img width="161px" height="56px" data-src="img/icon-svg/nav-ellipse-4.svg" alt="" uk-img>
 					<span>Сельская новь</span>
 				</a>
 			</li>
+			<li>
+				<a href="junior.html">
+					<img width="92px" height="55px" data-src="img/icon-svg/nav-ellipse-5.svg" alt="" uk-img>
+					<span>Мясо кур</span>
+				</a>
+			</li>
 		</ul>
 	</div>
-</nav><!-- end nav -->
+</nav>
+<!-- end nav -->
 
 </div>
 
